@startuml
title entity層のクラス図
hide empty members
left to right direction

package entity{
    class Customer{
        -customerId: Integer
        -customerName: String
        -customerNameKana: String
        -customerAddress1: String
        -customerAddress2: String
        -customerPhoneNumber: String
        -customerMailAdress:String
        -customerUsername: String
        -customerPassword: String
        -customerRegisterDate: ZonedDateTime
    }

    class Order{
        -orderId: Integer
        -orderDate: ZonedDateTime
        -amountTotal: Integer
        -orderDetail: OrderDetail
        -orderStatus: OrderStatus
        -payMethod: PaymentMethod
        -customerId: Integer
    }

    class OrderDetail{
        -orderDetailId: Integer
        -count: Integer
        -productId: Integer
    }
    
    class PaymentMethod{
    	-payMethodId: Integer
    	-payMethodName: String
    }

    class OrderStatus{
        orderStatusId: Integer
        orderStatusName: String
    }

    class Product{
        -prodId: Integer
        -prodName: String
        -price: Integer
        -imageUrl: String
        -prodCategory: ProductCategory
        -prodStock: ProduckStock
    }

    class ProductCategory{
        -prodCategoryId: Integer
        -prodCategoryName: String
    }

    class ProductStock{
        -prodStockId: Integer
        -quantity: Integer
    }

}

Customer <--> Order
Order --> OrderStatus
Order --> OrderDetail
Order --> PaymentMethod
Product --> ProductStock
Product --> ProductCategory
@enduml